[package]
name = "cuprate-p2p"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Boog900"]

[dependencies]
monero-wire = {path= "../net/monero-wire"}
monero = {git="https://github.com/Boog900/monero-rs.git", branch="db", features=["database"]}
tower = {version = "0.4.13", features = ["util"]}
tokio = {version="1.26", features =["net"]}
futures = "0.3.26"
thiserror = "1.0.39"
bytes = "1"


