[package]
name = "cuprate-peer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Boog900"]


[dependencies]
chrono = "0.4.24"
thiserror = "1.0.39"
cuprate-common = {path = "../common"}
monero = {git="https://github.com/Boog900/monero-rs.git", branch="db", features=["database"]}
monero-wire = {path= "../net/monero-wire"}
futures = "0.3.26"
tower = {version = "0.4.13", features = ["util", "steer"]}
tokio = {version= "1.27", features=["rt", "time"]}
async-trait = "0.1.68"
tracing = "0.1.37"
rand = "0.8.5"