[package]
name = "cuprate-pruning"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Boog900"]

[features]
default = []
borsh = ["dep:borsh"]

[dependencies]
thiserror = { workspace = true }

borsh = { workspace = true, features = ["derive", "std"], optional = true }

[lints]
workspace = true