[package]
name = "cuprate-pruning"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Boog900"]

[features]
default = []
borsh = ["dep:borsh"]

[dependencies]
cuprate-constants = { workspace = true, features = ["block"] }

thiserror = { workspace = true }

borsh = { workspace = true, features = ["derive", "std"], optional = true }

[lints]
workspace = true
