[package]
name        = "cuprate-types"
version     = "0.0.0"
edition     = "2021"
description = "Cuprate data types"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/types"
keywords    = ["cuprate", "types"]

[features]
default    = ["blockchain", "epee", "serde"]
blockchain = []
epee       = ["dep:cuprate-epee-encoding"]
serde      = ["dep:serde"]
proptest   = ["dep:proptest",  "dep:proptest-derive"]

[dependencies]
cuprate-epee-encoding = { path = "../net/epee-encoding", optional = true }
cuprate-fixed-bytes   = { path = "../net/fixed-bytes" }

bytes            = { workspace = true }
curve25519-dalek = { workspace = true }
monero-serai     = { workspace = true }
serde            = { workspace = true, features = ["derive"], optional = true }
borsh            = { workspace = true, optional = true }
thiserror        = { workspace = true }

proptest = { workspace = true, optional = true }
proptest-derive  = { workspace = true, optional = true }

[dev-dependencies]

[lints]
workspace = true