[package]
name        = "cuprate-types"
version     = "0.0.0"
edition     = "2021"
description = "Cuprate data types"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/types"
keywords    = ["cuprate", "types"]

[features]
default    = ["blockchain", "epee", "serde", "json", "hex"]
blockchain = []
epee       = ["dep:cuprate-epee-encoding"]
serde      = ["dep:serde", "hex"]
proptest   = ["dep:proptest",  "dep:proptest-derive"]
json       = ["hex", "dep:cuprate-helper"]
# We sadly have no choice but to enable serde here as otherwise we will get warnings from the `hex` dep being unused.
# This isn't too bad as `HexBytes` only makes sense with serde anyway.
hex        = ["serde", "dep:hex"]

[dependencies]
cuprate-epee-encoding   = { workspace = true, optional = true, features = ["std"] }
cuprate-helper          = { workspace = true, optional = true, features = ["cast"] }
cuprate-fixed-bytes     = { workspace = true, features = ["std", "serde"] }

bytes            = { workspace = true }
curve25519-dalek = { workspace = true }
monero-serai     = { workspace = true }
hex              = { workspace = true, features = ["serde", "alloc"], optional = true }
serde            = { workspace = true, features = ["std", "derive"], optional = true }
strum            = { workspace = true, features = ["derive"] }
thiserror        = { workspace = true }

proptest = { workspace = true, optional = true }
proptest-derive  = { workspace = true, optional = true }

[dev-dependencies]
hex-literal       = { workspace = true }
pretty_assertions = { workspace = true }
serde_json        = { workspace = true, features = ["std"] }

[lints]
workspace = true
