[package]
name        = "cuprate-json-rpc-bench"
version     = "0.0.0"
edition     = "2021"
description = "Benchmarking for Cuprate's JSON-RPC 2.0 implementation"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/benches/cuprate-json-rpc"
keywords    = ["cuprate", "json-rpc", "benchmark"]

[dependencies]
criterion        = { workspace = true }
function_name    = { workspace = true }
serde_json       = { workspace = true, features = ["default"] }
tempfile         = { workspace = true }

json-rpc = { path = "../../rpc/json-rpc" }

[[bench]]
name    = "main"
harness = false