[package]
name = "cuprated"
version = "0.0.1"
edition = "2021"
description = "The Cuprate Rust Monero node."
license = "AGPL-3.0-only"
authors = ["Boog900", "hinto-janai", "SyntheticBird45"]
repository = "https://github.com/Cuprate/cuprate/tree/main/binaries/cuprated"

[dependencies]
# TODO: after v1.0.0, remove unneeded dependencies.
cuprate-consensus         = { workspace = true }
cuprate-fast-sync         = { workspace = true }
cuprate-consensus-context = { workspace = true }
cuprate-consensus-rules  = { workspace = true }
cuprate-cryptonight      = { workspace = true }
cuprate-helper           = { workspace = true, features = ["serde"] }
cuprate-epee-encoding    = { workspace = true }
cuprate-fixed-bytes      = { workspace = true }
cuprate-levin            = { workspace = true }
cuprate-wire             = { workspace = true }
cuprate-p2p              = { workspace = true, features = ["serde"] }
cuprate-p2p-core         = { workspace = true, features = ["serde"] }
cuprate-dandelion-tower  = { workspace = true, features = ["txpool"] }
cuprate-async-buffer     = { workspace = true }
cuprate-address-book     = { workspace = true, features = ["serde_config"] }
cuprate-blockchain       = { workspace = true }
cuprate-database-service = { workspace = true, features = ["serde"] }
cuprate-txpool           = { workspace = true }
cuprate-database         = { workspace = true, features = ["serde"] }
cuprate-pruning          = { workspace = true }
cuprate-test-utils       = { workspace = true }
cuprate-types            = { workspace = true }
cuprate-json-rpc         = { workspace = true }
cuprate-rpc-interface    = { workspace = true }
cuprate-rpc-types        = { workspace = true }


# TODO: after v1.0.0, remove unneeded dependencies.
anyhow                = { workspace = true }
async-trait           = { workspace = true }
bitflags              = { workspace = true }
borsh                 = { workspace = true }
bytemuck              = { workspace = true }
bytes                 = { workspace = true }
cfg-if                = { workspace = true }
clap                  = { workspace = true, features = ["cargo", "help", "wrap_help"] }
chrono                = { workspace = true }
crypto-bigint         = { workspace = true }
crossbeam             = { workspace = true }
curve25519-dalek      = { workspace = true }
const_format          = { workspace = true }
dashmap               = { workspace = true }
dirs                  = { workspace = true }
futures               = { workspace = true }
hex                   = { workspace = true }
hex-literal           = { workspace = true }
indexmap              = { workspace = true }
monero-serai          = { workspace = true }
paste                 = { workspace = true }
pin-project           = { workspace = true }
randomx-rs            = { workspace = true }
rand                  = { workspace = true }
rand_distr            = { workspace = true }
rayon                 = { workspace = true }
serde_bytes           = { workspace = true }
serde_json            = { workspace = true }
serde                 = { workspace = true }
thiserror             = { workspace = true }
thread_local          = { workspace = true }
tokio-util            = { workspace = true }
tokio-stream          = { workspace = true }
tokio                 = { workspace = true }
toml                  = { workspace = true, features = ["parse", "display"]}
tower                 = { workspace = true }
tracing-subscriber    = { workspace = true, features = ["std", "fmt", "default"] }
tracing               = { workspace = true, features = ["default"] }

[lints]
workspace = true
