[package]
name = "cuprate-fast-sync"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cuprate-fast-sync-create-hashes"
path = "src/create.rs"

[dependencies]
cuprate-blockchain      = { path = "../../storage/blockchain" }
cuprate-consensus       = { path = ".." }
cuprate-consensus-rules = { path = "../rules" }
cuprate-types           = { path = "../../types" }
cuprate-helper          = { path = "../../helper", features = ["cast"] }

clap         = { workspace = true, features = ["derive", "std"] }
hex          = { workspace = true }
hex-literal  = { workspace = true }
monero-serai = { workspace = true }
sha3         = { version = "0.10.8" }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
tower        = { workspace = true }

[dev-dependencies]

[lints]
workspace = true