[package]
name = "cuprate-fast-sync"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "cuprate-fast-sync-create-hashes"
path = "src/create.rs"

[dependencies]
cuprate-blockchain          = { workspace = true, features = ["service"] }
cuprate-consensus           = { workspace = true }
cuprate-consensus-rules     = { workspace = true }
cuprate-consensus-context   = { workspace = true }
cuprate-types               = { workspace = true }
cuprate-helper              = { workspace = true, features = ["cast"] }

clap         = { workspace = true, features = ["derive", "std"] }
hex          = { workspace = true }
hex-literal  = { workspace = true }
monero-serai = { workspace = true }
sha3         = { version = "0.10.8" }
thiserror    = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
tower        = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
