[package]
name = "cuprate-fast-sync"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "create-fs-file"
path = "src/create.rs"

[dependencies]
cuprate-blockchain          = { workspace = true }
cuprate-consensus           = { workspace = true }
cuprate-consensus-context   = { workspace = true }
cuprate-types               = { workspace = true }
cuprate-p2p                 = { workspace = true }
cuprate-p2p-core            = { workspace = true }

clap         = { workspace = true, features = ["derive", "std"] }
hex          = { workspace = true }
monero-serai = { workspace = true }
blake3       = { workspace = true }
tokio        = { workspace = true, features = ["full"] }
tower        = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
