[package]
name = "monero-consensus"
version = "0.1.0"
edition = "2021"

[features]
default = []
proptest = ["dep:proptest", "dep:proptest-derive"]
rayon = ["dep:rayon"]

[dependencies]
cuprate-helper = { path = "../../helper", default-features = false, features = ["std"] }
cryptonight-cuprate = {path = "../../cryptonight"}

monero-serai = { workspace = true, features = ["std"] }
multiexp = { workspace = true, features = ["std", "batch"] }
dalek-ff-group = { workspace = true, features = ["std"] }
curve25519-dalek = { workspace = true, features = ["alloc", "zeroize", "precomputed-tables"] }

rand = { workspace = true, features = ["std"] }

hex = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
crypto-bigint = { workspace = true }

tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

rayon = { workspace = true, optional = true }

proptest = {workspace = true, optional = true}
proptest-derive = {workspace = true, optional = true}

[dev-dependencies]
proptest = {workspace = true}
proptest-derive = {workspace = true}
tokio = {version = "1.35.0", features = ["rt-multi-thread", "macros"]}