[package]
name = "cuprate-consensus-rules"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Boog900"]

[features]
default = []
proptest = ["dep:proptest", "dep:proptest-derive", "cuprate-types/proptest"]
rayon = ["dep:rayon"]

[dependencies]
cuprate-helper = { path = "../../helper", default-features = false, features = ["std"] }
cuprate-types = { path = "../../types", default-features = false }
cuprate-cryptonight = {path = "../../cryptonight"}

monero-serai = { workspace = true, features = ["std"] }
curve25519-dalek = { workspace = true, features = ["alloc", "zeroize", "precomputed-tables"] }

rand = { workspace = true, features = ["std", "std_rng"] }

hex = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
crypto-bigint = { workspace = true }

tracing = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

rayon = { workspace = true, optional = true }

proptest = {workspace = true, optional = true}
proptest-derive = {workspace = true, optional = true}

[dev-dependencies]
proptest = {workspace = true}
proptest-derive = {workspace = true}
tokio = {version = "1.35.0", features = ["rt-multi-thread", "macros"]}