[package]
name        = "cuprate-database-benchmark"
version     = "0.0.0"
edition     = "2021"
description = "Benchmarking binary for Cuprate's database(s)"
license     = "MIT"
authors     = ["hinto-janai"]
repository  = "https://github.com/Cuprate/cuprate/tree/main/database/benchmark"
keywords    = ["cuprate", "database", "benchmark"]

[features]
default   = []

[dependencies]
anyhow           = { workspace = true }
cfg-if           = { workspace = true }
clap             = { workspace = true, features = ["default", "derive", "cargo"] }
cuprate-database = { path = "../", features = ["default", "serde"] }
cuprate-helper   = { path = "../../helper", features = ["fs", "thread"] }
serde            = { workspace = true, features = ["default", "derive"] }
serde_json       = { workspace = true, features = ["default"] }
strum            = { workspace = true, features = ["default", "derive"] }
tracing          = { workspace = true }
toml_edit        = { workspace = true, features = ["default", "serde"] }
rayon            = { workspace = true, optional = true }

[dev-dependencies]